<resources>
    <string name="phone_number_activity_title_login">لطفا شماره موبایل خود را جهت ارسال کد تایید وارد نمایید:</string>
    <string name="phone_number_activity_title_out">لطفا جهت اعتبار سنجی پروفایل, شماره موبایل خود را برای ارسال کد تایید وارد نمایید:</string>
    <string name="change_number_otf_activity">تغییر شماره موبایل</string>
    <string name="app_name">MainEways</string>
    <string name="date_format">%d %s</string>
    <string name="rial"> ریال </string>
    <string name="specialoffers_type_hint">انتخاب پیشنهاد ویژه</string>
    <string name="specialoffers_type_title">بسته ویژه:</string>
    <string name="receipt_for_shairing_title">رسید پرداخت قبض</string>
    <string name="receipt_for_shairing_footer">در کنار شماست</string>
    <string name="buycharge_transactiontype">"نوع تراکنش: "</string>
    <string name="buycharge_mobilenumber">"شماره موبایل: "</string>
    <string name="buycharge_chargetype">"نوع شارژ: "</string>
    <string name="buycharge_internrttype">"نوع بسته: "</string>
    <string name="buycharge_paymentamount">"مبلغ:  "</string>
    <string name="buycharge_current_credit">"سپرده جدید شما: "</string>
    <string name="network_error_no_internet">اتصال به اینترنت برقرار نمیباشد.</string>
    <string name="network_error_authorization_failed">باید لاگین دوباره انجام شود.</string>
    <string name="network_error_connection">خطا به هنگام تبادل اطلاعات با سرور</string>
    <string name="network_error_server_problem">خطای داخلی سرور</string>
    <string name="network_error_timeout">کیفیت اتصال با سرور ضعیف میباشد.</string>
    <string name="network_error_unsupported_api">این نسخه از اپلیکیشن به روز نمیباشد.</string>
    <string name="network_error_undefined">خطای نامشخص رخ داده است.</string>
    <string name="network_error_connect_to_server">مشکل در برقراری ارتباط با سرور</string>
    <string name="eways_contact_tab">لیست مخاطبین</string>
    <string name="add_eways_contact_tab">افزودن مخاطب</string>
    <string name="eways_contact_title_activity">دفترچه تلفن</string>
    <string name="eways_edit_contact_title_activity">ویرایش اطلاعات مخاطب</string>
    <string name="contact_remove_dialog_single_title">آیا از حذف کردن این شماره از لیست مخاطبین خود اطمینان دارید؟</string>
    <string name="contact_remove_dialog_remove">حذف کن</string>
    <string name="contact_remove_dialog_keep">نگه دار</string>
    <string name="add_eways_contact_form_name">نام :</string>
    <string name="add_eways_contact_form_family">نام خانوادگی :</string>
    <string name="add_eways_contact_form_number">شماره تلفن همراه :</string>
    <string name="add_eways_contact_form_credit">اعتبار :</string>
    <string name="add_eways_contact_form_description">توضیح :</string>
    <string name="add_eways_contact_form_confirm_button">ثبت</string>
    <string name="add_eways_contact_form_cancel_button">انصراف</string>
    <string name="edit_eways_contact_form_confirm_button">تایید</string>
    <string name="follow_order_start_date_hint">از تاریخ</string>
    <string name="follow_order_end_date_hint">تا تاریخ</string>
    <string name="follow_order_start_sale_number_hint">از شماره خرید</string>
    <string name="follow_order_end_sale_number_hint">تا شماره خرید</string>
    <string name="follow_order_text_of_order_condition">وضعیت سفارش</string>
    <string name="follow_order_search_button_title">جستجو</string>
    <string name="follow_order_stat_date_input_error">تاریخ شروع را وارد نمایید</string>
    <string name="sale_report_start_date_hint">از تاریخ</string>
    <string name="sale_report_end_date_hint">تا تاریخ</string>
    <string name="sale_report_page_title">گزارش فروش</string>
    <string name="sale_report_search_button_title">جستجو</string>
    <string name="sale_report_list_header_product_title">محصول</string>
    <string name="sale_report_list_header_count_title">تعداد</string>
    <string name="sale_report_list_header_amount_title"> قیمت </string>
    <string name="sale_report_stat_date_input_error">تاریخ شروع را وارد نمایید</string>
    <string name="salereport_summary">جزییات فروش</string>
    <string name="salereport_detail">خلاصه فروش</string>
    <string name="salereport_toolbar_title">گزارش فروش</string>
    <string name="sale_detail_report_item_bill_id_title">شناسه خرید:</string>
    <string name="sale_datail_report_item_more_key_1">فروشگاه:</string>
    <string name="sale_datail_report_item_more_key_2">مشتری:</string>
    <string name="sale_datail_report_item_more_key_3">سود:</string>
    <string name="sale_datail_report_item_more_key_4">استعلام:</string>
    <string name="sale_datail_report_item_more_key_5">تعداد:</string>
    <string name="sale_datail_report_item_more_key_6">نام کاربری:</string>
    <string name="sale_datail_report_item_more_key_7">موبایل:</string>
    <string name="toolbar_deposittitle">ســپـرده</string>
    <string name="toolbar_deposittitle_rials">(ریال)</string>
    <string name="emptyview_text">داده‌ای برای نمایش وجود ندارد!</string>
    <string name="retry_error_message">مشکلی پیش امده است</string>
    <string name="loadingstateview_retry_text">تلاش مجدد</string>
    <string name="loadingstateview_loading_error_text">لطفا دوباره تلاش کنید</string>
    <string name="loadingstateview_loading_connectiontimeout_error_text"> متاسفانه پاسخی دریافت نشد</string>
    <string name="loadingstateview_loading_internetspeed_text"> در حال دریافت اطلاعات \n لطفاً منتظر بمانید</string>
    <string name="loading_message"> در حال دریافت اطلاعات \n لطفا منتظر بمانید</string>
    <string name="chargesale_mobilenumber">شماره موبایل: </string>
    <string name="chargesale_paymentdate">تاریخ تراکنش: </string>
    <string name="chargesale_paymentid">شناسه پرداخت: </string>
    <string name="chargesale_paymentamount">مبلغ پرداخت (ریال): </string>
    <string name="minimum_chargeamount_irancell">حداقل مبلغ شارژ 5,000 ریال میباشد</string>
    <string name="minimum_chargeamount_otheroperatror">حداقل مبلغ شارژ 10,000 ریال میباشد</string>
    <string name="irancel">ایرانسل</string>
    <string name="hamrahe_aval">همراه اول</string>
    <string name="rightel_etebari">رایتل اعتباری</string>
    <string name="rightel_daemi">رایتل داائمی</string>
    <string name="internetpackage_option_type_hint">انتخاب نوع بسته</string>
    <string name="topupoption_type_hint">انتخاب نوع شارژ</string>
    <string name="topupoption_type_title">نوع شارژ:</string>
    <string name="topupchoice_type_hint">انتخاب مبلغ</string>
    <string name="topupchoice_type_title">انتخاب مبلغ</string>
    <string name="internetpackage_choice_type_hint">انتخاب مشخصات بسته</string>
    <string name="internetpackage_choice_type_title">بسته اینترنت:</string>
    <string name="internetpackage_option_type_title">بسته اینترنت:</string>
    <string name="toolbar_query_hint">جستجو در فروشگاه ایویز</string>
    <string name="confirm_button_dialog_text">تایید</string>
    <string name="add_choice_dialog_amount_title">مبلغ قابل پرداخت </string>
    <string name="add_choice_dialog_title">اضافه کردن مبلغ جدید</string>
    <string name="exit_app_text">برای خروج دکمه بازگشت را دوباره بزنید</string>
    <string name="navigation_drawer_title_1">اعتبار</string>
    <string name="navigation_drawer_title_2">امتیاز</string>
    <string name="navigation_drawer_title_3">درآمد</string>
    <string name="navigation_drawer_title_4">افزایش سپرده</string>
    <string name="navigation_drawer_home">خانه</string>
    <string name="navigation_drawer_store">فروشگاه</string>
    <string name="navigation_drawer_store_subitem1">پیگیری سفا رش</string>
    <string name="navigation_drawer_title_6">تراکنش ها</string>
    <string name="navigation_drawer_title_10">گزارش فروش</string>
    <string name="navigation_drawer_title_7">پشتیبانی</string>
    <string name="navigation_drawer_title_8">درباره ما</string>
    <string name="navigation_drawer_title_9">خروج</string>
    <string name="navigation_drawer_code_text">کد کاربر:</string>
    <string name="about_us_description">شرکت بازار اینترنتی ایرانیان (iibazar.com) یکی از  فعالان حوزه IT و تجارت الکترونیک می‌باشد، این شرکت با هدایت دو پروژه اصلی خود تحت نام‌های eways و imbazar تلاش نموده همراه با گسترش دامنه مخاطبان خود در حوزه‌های B2B و B2C کیفیت خدمات الکترونیک را ارتقا داده و سطح جدیدی از دامنه انتظارات را در کاربران ایرانی در بحث تکنولوژی و توزیع و فروش الکترونیک ایجاد نماید و به واسطه تکامل این انتظارات، رشد سازمانی خود را رقم زند. \n
 پروژه eways در حقیقت بخش B2B سازمان را تشکیل داده و در ارتباط مستقیم با کاربرانی می باشد که با استفاده از این سامانه، تعریف جدیدی از کسب و کار را برای خود ایجاد کرده‌اند.\n
 پروژه imbazar ارتباط B2C شرکت را به واسطه استفاده از نرم افزار‌های موبایلی با کاربران برقرار می‌نماید.
 </string>
    <string name="about_us_title">درباره ما</string>
    <string name="contact_us_title">پشتیبانی</string>
    <string name="contact_us_phone_number">021-64004</string>
    <string name="contact_us_email_id">support@eways.ir</string>
    <string name="contact_us_phonenumber_company_title">شماره پشتیبانی شرکت</string>
    <string name="contact_us_phonenumber_title">شماره تماس کارشناس</string>
    <string name="survey_title">نظرسنجی</string>
    <string name="survey_icon_view_text">نظر سنجی</string>
    <string name="item_point_selector_item_5_text">عالی</string>
    <string name="item_point_selector_item_5_number">5</string>
    <string name="item_point_selector_item_4_text">خیلی خوب</string>
    <string name="item_point_selector_item_4_number">4</string>
    <string name="item_point_selector_item_3_text">خوب</string>
    <string name="item_point_selector_item_3_number">3</string>
    <string name="item_point_selector_item_2_text">متوسط</string>
    <string name="item_point_selector_item_2_number">2</string>
    <string name="item_point_selector_item_1_text">ضعیف</string>
    <string name="item_point_selector_item_1_number">1</string>
    <string name="survey_multi_choice_max_limit_message">تعداد انتخاب های شما محدود است.</string>
    <string name="deposit_value_credit_text_start">موجودی سپرده شما</string>
    <string name="deposit_value_credit_text_end">:</string>
    <string name="deposit_rial"> (ریال) </string>
</resources>