<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sale_report_list_header_height"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/sale_report_list_item_sides_margin"
        android:layout_marginRight="@dimen/sale_report_list_item_sides_margin"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_deposittitle_rials"
                android:layout_marginRight="2.5dp"

                android:textColor="@color/sale_report_list_header_text_color"
                android:textSize="@dimen/sale_report_list_header_text_rial_size"
                app:fontFamily="@font/iran_yekan_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale_report_list_header_amount_title"

                android:textColor="@color/sale_report_list_header_text_color"
                android:textSize="@dimen/sale_report_list_header_text_size"
                app:fontFamily="@font/iran_yekan_medium" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/sale_report_list_header_count_title"

            android:textColor="@color/sale_report_list_header_text_color"
            android:textSize="@dimen/sale_report_list_header_text_size"
            app:fontFamily="@font/iran_yekan_medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="right|center_vertical"
            android:paddingRight="16dp"
            android:text="@string/sale_report_list_header_product_title"

            android:textColor="@color/sale_report_list_header_text_color"
            android:textSize="@dimen/sale_report_list_header_text_size"
            app:fontFamily="@font/iran_yekan_medium" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sale_report_list_header_separator_height"
        android:layout_marginLeft="@dimen/sale_report_list_header_separator_sides_margin"
        android:layout_marginRight="@dimen/sale_report_list_header_separator_sides_margin"
        android:background="@color/sale_report_list_header_separator_color" />
</LinearLayout>