<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/button_container"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:cardCornerRadius="@dimen/bill_payment_card_corner_radius"
        app:cardElevation="@dimen/bill_payment_card_elevation"
        app:contentPadding="15dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/add_eways_form_lable_side_margin"
                    android:fontFamily="@font/iran_yekan_medium"
                    android:gravity="right"
                    android:text="@string/add_eways_contact_form_name"
                    android:textColor="@color/add_contact_lable_form"
                    android:textSize="@dimen/add_eways_contact_form_lable_size" />

                <com.srp.eways.ui.view.input.InputElement
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="@dimen/add_eways_form_top_margin"
                    android:layout_marginBottom="@dimen/bill_payment_input_bill_id_margin_bottom" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/add_eways_form_row_top_margin"
                    android:layout_marginRight="@dimen/add_eways_form_lable_side_margin"
                    android:fontFamily="@font/iran_yekan_medium"
                    android:gravity="right"
                    android:text="@string/add_eways_contact_form_family"
                    android:textColor="@color/add_contact_lable_form"
                    android:textSize="@dimen/add_eways_contact_form_lable_size" />

                <com.srp.eways.ui.view.input.InputElement
                    android:id="@+id/input_family"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="@dimen/add_eways_form_top_margin" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_eways_form_row_top_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/add_eways_form_row_top_margin"
                        android:layout_marginRight="@dimen/add_eways_form_lable_side_margin"
                        android:layout_weight="0.5"
                        android:fontFamily="@font/iran_yekan_medium"
                        android:gravity="right"
                        android:text="@string/add_eways_contact_form_credit"
                        android:textColor="@color/add_contact_lable_form"
                        android:textSize="@dimen/add_eways_contact_form_lable_size" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/add_eways_form_lable_side_margin"
                        android:layout_marginTop="@dimen/add_eways_form_row_top_margin"

                        android:layout_weight="0.5"
                        android:fontFamily="@font/iran_yekan_medium"
                        android:gravity="right"
                        android:text="@string/add_eways_contact_form_number"
                        android:textColor="@color/add_contact_lable_form"
                        android:textSize="@dimen/add_eways_contact_form_lable_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.srp.eways.ui.view.input.InputElement
                        android:id="@+id/input_credit"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="@dimen/add_eways_form_top_margin"
                        android:layout_weight="0.5" />

                    <com.srp.eways.ui.view.input.InputElement
                        android:id="@+id/input_number"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="@dimen/add_eways_form_side_margin"
                        android:layout_marginTop="@dimen/add_eways_form_top_margin"
                        android:layout_marginBottom="@dimen/bill_payment_input_bill_id_margin_bottom"
                        android:layout_weight="0.5" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/add_eways_form_row_top_margin"
                    android:layout_marginRight="@dimen/add_eways_form_lable_side_margin"
                    android:fontFamily="@font/iran_yekan_medium"
                    android:gravity="right"
                    android:text="@string/add_eways_contact_form_description"
                    android:textColor="@color/add_contact_lable_form"
                    android:textSize="@dimen/add_eways_contact_form_lable_size" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_description_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/add_eways_form_top_margin"
                    android:layout_marginBottom="@dimen/add_eways_form_top_margin"
                    android:background="@drawable/descriptionfield_addcontact_background"
                    android:fontFamily="@font/iran_yekan"
                    android:gravity="right"
                    android:minHeight="66dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/add_eways_contact_form_inputtext_color"
                    android:textSize="@dimen/add_eways_contact_form_inputtext_size" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:weightSum="2.875">


        <com.srp.eways.ui.view.button.ButtonElement
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonelement_default_height"
            android:layout_marginRight="16dp"
            android:layout_gravity="bottom"
            android:layout_weight="1.875" />

        <com.srp.eways.ui.view.button.ButtonElement
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="@dimen/buttonelement_default_height"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>
